--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,22 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-s3-devkitc-1]
+[env:esp32s3dev]
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = WROOM-1-N4R2   
+board_build.mcu = esp32s3
+board_build.f_cpu = 240000000L
 framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
+lib_deps =    
+    https://github.com/janelia-arduino/TMC2209.git
+    TMCStepper
 
-lib_deps =    https://github.com/janelia-arduino/TMC2209.git
-  TMCStepper
+board_dir = ./boards
+build_flags = 
+    -DBOARD_HAS_PSRAM
+    -DARDUINO_USB_MODE=0
+    ; -DARDUINO_RUNNING_CORE=1
+    ; -DARDUINO_EVENT_RUNNING_CORE=1
+    -DARDUINO_USB_CDC_ON_BOOT=0
